--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,9 @@ table {
   --gunmetal:#30353D;
 }
 
+.bold{
+  font-weight:bold;
+}
 
 body{
   scroll-behavior: smooth;
@@ -72,12 +75,18 @@ body{
 .--header{
   display:flex;
   align-items: center;
-  box-shadow: rgb(0 0 0 / 12%) 0 1px 8px;
+  background-color:var(--gunmetal);
+  color:whitesmoke;
+  padding:.5em 1em;
+  border:2px solid var(--oldgold);
+  box-shadow: rgb(0 0 0 / 32%) 0 1px 32px;
 }
 
 .--header-logo{
   width: 4em;
   height:4em;
+  background-color:whitesmoke;
+  border-radius:50%;
 }
 
 .--header-shop-icon{
@@ -91,10 +100,91 @@ body{
 }
 
 /*Main Content Styles*/
-.--main-content-cards{
+.--main-content-container{
+  padding:2em 0;
+} 
+
+.--main-content-img img{
+  display:block;
+  width:100%;
+  max-width: 28.125em;
+  margin:0 auto;
+}
+
+.--main-content-title{
+  text-align: center;
+  font-size:1.3rem;
+  padding:1em 0;
+}
+.--main-content-reviews{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+
+.--main-content-review-total{
+  padding:.25em 0;
+  border-bottom:6px solid var(--skyblue);
+  margin-bottom:1em;
+}
+
+.--main-content-recent-review{
+  text-align:center;
+}
+
+.--main-content-reviews-btn{
+  all:unset;
+  background-color:var(--feldgrau);
+  color:whitesmoke;
+  text-shadow: 0 0 .125em #30353D;
+  padding:1em 1.5em;
+  border-radius:.9375em;
+  border:2px solid #7A7775;
+  transition: background-color .4s ease;
+  display:block;
+  margin:1em auto;
+}
+
+.--main-content-reviews-btn:hover{
+  background-color:var(--oldgold);
+  transition: background-color .4s ease;
+}
+
+.--main-content-review-card{
+  max-width:28.125em;
+  margin:1em;
+  padding:1em;
+  border:1px solid var(--gunmetal);
+  border-radius:15px;
+}
+
+.--main-content-review-card-testimonial{
+  padding:.5em;
+  font-style: italic;
+}
+
+.--main-content-review-card-date{
+  font-size:.75rem;
+  text-align: right;
+}
+
+.--main-content-more-cards{
+  text-align:center;
+  font-size:1.4rem;
+  color:var(--gray);
+  margin:1.5em 0;
+}
+
+.--main-content-cards-container{
   display:flex;
   flex-wrap:wrap;
+  justify-content: center;
+  max-width:50em;
+  margin:0 auto;
 }
+
 .card {
   width: 9.375em;
   margin: .3125em;
@@ -111,7 +201,8 @@ body{
 /*Footer Styles*/
 .--footer{
   background-color:var(--feldgrau);
-  color:whitesmoke;
+  border:2px solid var(--oldgold);
+  color:whitesmoke; 
   text-shadow:0 0 2px var(--skyblue);
   display:flex;
   flex-direction:column;
@@ -126,9 +217,9 @@ body{
 }
 
 @media (min-width:960px) {
-  .--footer{
+  /* .--footer{
     position:absolute;
     bottom:0;
     width:100%;
-  }
+  } */
 }
